# opus_transcoding

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  converter.h  declare.h  demuxer.h  muxer.h
src/: App.cpp  converter.cpp  demuxer.cpp  main.cpp  muxer.cpp
